# UWPMinGWPlayground

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  UWPMinGWPlayground.pfx
cmake/: AppX.cmake  Architecture.cmake  PDB.cmake  ThirdParty.cmake  WindowsSDK.cmake
src/: .clangd  App.cpp  AppxManifest.in  CMakeLists.txt  ListItem.cpp  ListItem.h  MainWindowView.cpp  MainWindowView.xaml  NegativeDoubleConverter.cpp  NegativeDoubleConverter.h  Property.hpp  SimpleCommand.cpp  SimpleCommand.h  UWPMinGWPlayground.pfx
